# Hive_Pro_Assignment

./: .env.example  .gitignore  AI_Cyber_Risk_Assignment.docx  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
configs/: default.yaml
data/: assets.csv  business_services.csv  remediation_guidance.csv  synthetic_threat_report.md  threat_intelligence.csv  vulnerabilities.csv
scripts/: bootstrap.py  download_kev.py  ingest_nist_vectors.py
src/cyber_risk/: __init__.py  bootstrap.py
src/cyber_risk/config/: __init__.py  settings.py
src/cyber_risk/datasets/: __init__.py  loaders.py  uploads.py
src/cyber_risk/graph/: __init__.py  workflow.py
src/cyber_risk/llm/: __init__.py  groq_service.py
src/cyber_risk/rag/: __init__.py  embeddings.py  nist_oscal.py  nist_retriever.py  vector_store.py
src/cyber_risk/reporting/: __init__.py  formatter.py
src/cyber_risk/risk_engine/: __init__.py  correlator.py  kev_service.py  scoring.py
src/cyber_risk_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tawasol_risk/: __init__.py
src/tawasol_risk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tawasol_risk/config/: __init__.py  settings.py
src/tawasol_risk/datasets/: __init__.py  loaders.py  schemas.py
src/tawasol_risk/graph/: __init__.py  workflow.py
src/tawasol_risk/rag/: __init__.py  embeddings.py  nist_oscal.py  nist_retriever.py  vector_store.py
src/tawasol_risk/reporting/: __init__.py  formatter.py
src/tawasol_risk/risk_engine/: __init__.py  correlator.py  kev_service.py  scoring.py
streamlit_app/: app.py
tests/: test_api_surface.py  test_loaders_csv.py  test_scoring.py
web/: app.py
