[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tawasol-risk"
version = "0.1.0"
description = "AI-assisted cyber risk prioritization for TawasolPay (assignment scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "streamlit>=1.32",
  "pandas>=2.2",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langgraph>=0.2",
  "sentence-transformers>=2.6",
  "numpy>=1.26",
]

[project.optional-dependencies]
pinecone = ["pinecone[grpc]>=5.0"]
groq = ["langchain-groq>=0.1"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
